--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,5 @@ Header set Access-Control-Allow-Origin "*"
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$    /index.php/$2/?page=$1   [L]
+RewriteRule ^(.*)$ index.php?page=$1 [L,QSA]
 </IfModule>
