--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,8 @@ services:
         sync: false
       - key: DB_PASSWORD
         sync: false
+      - key: DB_PORT
+        sync: false
       - key: DB_DATABASE
         baseValue: defaultdb
         sync: false
